--- a/The Kit.html
+++ b/The Kit.html
@@ -15,7 +15,7 @@
     </div>
 	<div class="Navbar">
 		<nav>
-			<a href="Index Page.html"> Home </a>
+			<a href="index.html"> Home </a>
 			<a href="The Kit.html"> The Kit </a>
 			<a href="About Me.html"> About Me</a>
 			<a href="Contact Me.html"> Contact Me</a>
