--- a/About Me.html
+++ b/About Me.html
@@ -16,7 +16,7 @@
 	<div class="Navbar">
 		<nav>
 			<a href="The Kit.html"> The Kit </a>
-			<a href="Index Page.html"> Home</a>
+			<a href="index.html"> Home</a>
 			<a href="About Me.html"> About Me</a>
 			<a href="Contact Me.html"> Contact me </a>
 		</nav>	
