--- a/About Me.html
+++ b/About Me.html
@@ -31,7 +31,7 @@
 		<p> Hey everyone! My name is Shekhar but you can call me Shek. I am a advertising major attending AAU and so far everything has been smooth here even with the pandemic going on. I am 25 years old located in the Bay Area, East bay to be more specific. I love to watch movies, listen to music, play games, go out with friends (ha ha COVID we can put that on hold for now), and many other things. Overall I like to live my life with all the fun I can possibly have. Thanks for stopping by my survival kit page and I hope to meet some of you guys soon. Take care and Happy Holidays!</p>
 	</div>
 	<div class="Footer">
-		<a href="Index Page.html"> Home</a>
+		<a href="index.html"> Home</a>
 		<a href="The Kit.html"> The Kit</a>
 		<a href="Contact Me.html"> Contact Me</a>
 		
