--- a/The Kit.html
+++ b/The Kit.html
@@ -185,7 +185,7 @@
 	</div>
 </div>
 	<div class="Footer">
-		<a href="Index Page.html">Home</a>
+		<a href="index.html">Home</a>
 		  <a href="About Me.html"> About</a>
 		<a href="Contact Me.html"> Contact</a>
 		
