--- a/Contact Me.html
+++ b/Contact Me.html
@@ -39,7 +39,7 @@
 	</form>
 	</div>
 	<div class="Footer">
-		<a href="Index page.html"> Home </a>
+		<a href="index.html"> Home </a>
 		<a href="The Kit.html"> The Kit</a>
 		<a href="About Me.html"> About Me</a>
 	</div>
