--- a/The Kit.html
+++ b/The Kit.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="Header">
-		<img src="../Final part4/Assets/Sheks Survival Kit.png" width="200">
+		<img src="assets/Sheks Survival Kit.png" width="200">
 	<h5> ali.shekhar@gmail.com</h5>
     </div>
 	<div class="Navbar">
@@ -23,7 +23,7 @@
 	</div>
 <div class="grid-container">
 	<div class="wrap">
-		<div class="grid-item"><img class="Resize" src="../Final part4/Assets/Item 1.jpeg">
+		<div class="grid-item"><img class="Resize" src="assets/Item 1.jpeg">
 			<div class="overlay">
 				<h3> M340i</h3>
 				<div class="textoverlay"> My Car is definetly a essential for me. Without it I would be stuck at home, not able to go to my job, and meet my friends to hang out.</div>
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div class="wrap">
- 	  <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 2.jpeg">
+ 	  <div class="grid-item"> <img class="Resize" src="assets/Item 2.jpeg">
 		<div class="overlay">
 			<h3> Shadow </h3>
 			<div class="textoverlay">They say a dog is a man's best friend right? Well here's my best friend, Shadow. Pretty ironic name for a Siberian Husky that’s all white. </div>
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<div class="wrap">	
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 3.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 3.jpeg">
 			<div class="overlay">
 				<h3> Disney </h3>
 				<div class="textoverlay"> Come on.. Who doesn’t love Disney? It brings the little kid out of me and it's always going to be essential for me to visit the Happiest Place On Earth whenever I get the chance.</div>
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 	<div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 4.jpeg">
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 4.jpeg">
 			 <div class="overlay">
 				 <h3> Shoes </h3>
 				 <div class="textoverlay">Shoes are part of my lifestyle. I think of it as the perfect accessory to make or break an outfit. </div>
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 	<div class="wrap">		
-  		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 5.jpeg">
+  		 <div class="grid-item"> <img class="Resize" src="assets/Item 5.jpeg">
 			 <div class="overlay">
 				 <h3> PS5</h3>
 				 <div class="textoverlay">Games have been my escape from reality for quite some time now. It's always good to kick back, talk to friends, and enjoy playing games together once in a while.</div>
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 6.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 6.jpeg">
 			<div class="overlay">
 				<h3> Movies</h3>
 				<div class="textoverlay">Just like playing games, movies are a good way to relax and enjoy quality entertainment with your friends and family.</div>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 7.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 7.jpeg">
 			<div class="overlay">
 				<h3> Macbook</h3>
 				<div class="textoverlay">I use my laptop for everything. It's definitely essential for me in a survival kit since i need it for both school and work.</div>
@@ -79,7 +79,7 @@
 		</div>
 	</div>
 	<div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 8.jpeg">
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 8.jpeg">
 			 <div class="overlay">
 				 <h3> Hats </h3>
 				 <div class="textoverlay">Like shoes, hats are another accessory for me that can make or break your fit. If you're too lazy to style your hair you throw a hat on and you are all set for the rest of the day.</div>
@@ -87,7 +87,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 9.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 9.jpeg">
 			<div class="overlay">
 				<h3>Pomade</h3>
 				<div class="textoverlay">Pomade is literally a life saver for me.. Or should I say hair saver? It keeps my hair in check otherwise my hair would frizz out and I would look like an Oranghutang. </div>
@@ -95,7 +95,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 10.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 10.jpeg">
 			<div class="overlay">
 				<h3> Airpods </h3>
 				<div class="textoverlay">The great thing about air pods is that they are small, lightweight, can fit into a pocket, and be used with any bluetooth device. It's great for me since I workout, and I use it for work to join in on zoom meetings through my Ipad or Macbook.</div>
@@ -103,7 +103,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 11.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 11.jpeg">
 			<div class="overlay">
 				<h3> Hydroflask</h3>
 				<div class="textoverlay">Staying hydrated is a must! I hate carrying water bottles, the water does not stay cold and its extra waste thrown into the environment. Hydro flask is the way to go. It keeps my water cold and it’s reusable.</div>
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 12.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 12.jpeg">
 			<div class="overlay">
 				<h3> Ipad </h3>
 				<div class="textoverlay">When I don’t feel like taking my macbook on trips I bring my ipad. It's good if I have to do an emergency meeting for work, or if I want to watch movies on the plane. </div>
@@ -119,7 +119,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 13.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 13.jpeg">
 			<div class="overlay">
 				<h3> Cologne</h3>
 				<div class="textoverlay">Just like Shoes and Hats, cologne is a must have for me. I like to smell good and what better way is there than a nice cologne.</div>
@@ -127,7 +127,7 @@
 		</div>
 	</div>
 	<div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 14.jpeg">
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 14.jpeg">
 			 <div class="overlay">
 				 <h3> Bourbon</h3>
 				 <div class="textoverlay">A nice way to take the edge off if you feel burnt out after a long day. Nothing a nice Manhattan can't fix.</div>
@@ -135,7 +135,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-		  <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 15.jpeg">
+		  <div class="grid-item"> <img class="Resize" src="assets/Item 15.jpeg">
 			  <div class="overlay">
 				  <h3> Jacket</h3>
 				  <div class="textoverlay"> I feel like every person should have at least one ltterman style jacket. Its versatile, keeps you at a nice temparature, and its stylish. Go Warriors!</div>
@@ -143,7 +143,7 @@
 		</div> 
 	</div>
 	<div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 16.jpeg">
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 16.jpeg">
 			 <div class="overlay">
 				 <h3> Guitar Amp</h3>
 				 <div class="textoverlay">A guitar amp is a must for anyone who has an electric guitar. If you don’t have one how would you get sound out of your electric guitar? </div>
@@ -151,7 +151,7 @@
 		</div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 17.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 17.jpeg">
 			<div class="overlay">
 				<h3>Guitar</h3>
 					<div class="textoverlay">This is my baby. I'm still a beginner at guitar but she is already a part of me. Just like playing games or listening to music, playing guitar is my escape.
@@ -160,7 +160,7 @@
 		</div>
 	</div>
 	 <div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 18.jpeg"> 
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 18.jpeg"> 
 		 	<div class="overlay">
 				<h3> Watch </h3>
 					<div class="textoverlay">What if your phone, tablet, computer, and all other digital accessories run out of battery? A watch is definitely a necessity for that. Long lasting battery and you don't need to recharge it.</div>
@@ -168,7 +168,7 @@
 		 </div>
 	</div>
 	<div class="wrap">
-  		<div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 19.jpeg">
+  		<div class="grid-item"> <img class="Resize" src="assets/Item 19.jpeg">
 	 		<div class="overlay">
 		 		<h3> Wallet </h3>
 				 <div class="textoverlay">You need to carry your personal cards and cash in something right? Thats why wallets fall under my essential list. I always keep it around me since it carries my personal info and most importantly my drivers license.</div>
@@ -176,7 +176,7 @@
 		</div>
 	</div>
 	<div class="wrap">
- 		 <div class="grid-item"> <img class="Resize" src="../Final part4/Assets/Item 20.jpeg">
+ 		 <div class="grid-item"> <img class="Resize" src="assets/Item 20.jpeg">
 			 <div class="overlay">
 				 <h3> Chewbacca</h3>
 				 	<div class="textoverlay">Last but not least, my knockoff Chewbacca. I’ve had this thing for years and even though it doesn't look anything close to the actual Chewbacca, it's still funny to look at.</div>
