--- a/Contact Me.html
+++ b/Contact Me.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="Header">
-		<img src="../Final part4/Assets/Sheks Survival Kit.png" alt="Logo" width="200">&nbsp;
+		<img src="assets/Sheks Survival Kit.png" alt="Logo" width="200">&nbsp;
       <h5> ali.shekhar@gmail.com</h5>
     </div>
 	
