--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 	<body>
 	<div class="Header">
-	<img src="../Final part4/Assets/Sheks Survival Kit.png" width="200">
+	<img src="assets/Sheks Survival Kit.png" width="200">
       <h5> ali.shekhar@gmail.com</h5>
     </div>
 	<div class="Navbar">
